corrected z-index on admin menu

--- a/app/assets/themes/pixelache/stylesheets/main.css.scss
+++ b/app/assets/themes/pixelache/stylesheets/main.css.scss
@@ -2,6 +2,9 @@
 
 .top-bar-wrapper {
   height: 40px;
+  &.fixed {
+    z-index:110;
+  }
 }
 
 nav.top-bar {
